# daily-ai-insight

./: .env.example  .gitignore  CALLBACK_PATTERN.md  CHANGELOG.md  CLAUDE.md  COLLECTORS_IMPLEMENTATION_SUMMARY.md  ENV_VARS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GAP_ANALYSIS.md  MIGRATION_REFACTOR_A.md  Makefile  PLAN.md  README.md  REFACTOR_PROPOSAL.md  REFACTOR_SUMMARY.md  STORAGE_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  ai_daily_2025-11-26.html  ai_daily_2025-11-26.md  analyze_list.py  check_env_config.py  files.md  folo_digest.md  folo_summary.md  folo_updates.md  progress.md  pyproject.toml  twitter.list.txt
.github/workflows/: daily-digest.yml  daily-report.yml
cloudflare-worker/: worker.js  wrangler.toml
configs/: feedback.yaml  profile.yaml  sources.yaml
docs/: DOCUMENTATION_CLEANUP_PLAN.md  SCRIPTS_CLEANUP_ANALYSIS.md  ai_daily_2025-12-04.html  ai_daily_2025-12-05.html  ai_daily_2025-12-06.html  ai_daily_2025-12-07.html  ai_daily_2025-12-08.html  ai_daily_2025-12-09.html  ai_daily_2025-12-10.html  ai_daily_2025-12-11.html  ai_daily_2025-12-12.html  ai_daily_2025-12-13.html  ai_daily_2025-12-14.html  ai_daily_2025-12-15.html  ai_daily_2025-12-16.html  ai_daily_2025-12-17.html  ai_daily_2025-12-18.html  ai_daily_2025-12-19.html  ai_daily_2025-12-20.html  ai_daily_2025-12-21.html  ai_daily_2025-12-22.html  ai_daily_2025-12-23.html  ai_daily_2025-12-24.html  ai_daily_2025-12-25.html  ai_daily_2025-12-26.html  ai_daily_2025-12-27.html  ai_daily_2025-12-28.html  ai_daily_2025-12-29.html  ai_daily_2025-12-30.html  ai_daily_2025-12-31.html  ai_daily_2026-01-01.html  ai_daily_2026-01-02.html  ai_daily_2026-01-03.html  ai_daily_2026-01-04.html  ai_daily_2026-01-05.html  ai_daily_2026-01-06.html  ai_daily_2026-01-07.html  ai_daily_2026-01-08.html  ai_daily_2026-01-09.html  ai_daily_2026-01-10.html  (+196 more)
docs/guides/: MIGRATION_GUIDE.md
docs/refactoring/: CLEANUP_RECOMMENDATIONS.md  MIXED_LIST_HANDLING.md  MIXED_SOURCES_GUIDE.md  REFACTORING_TEST_REPORT.md  REFACTOR_PLAN.md  SOURCE_SPECIFIC_PROCESSING.md
examples/: callback_usage.py
scripts/: fetch_folo_list.py  generate_daily_report.py  generate_index.py  summarize_digest.py  sync_feedback.py  test_collectors_complete.py  test_feishu_send.py  test_refactoring.py  test_signature.py  update_imports.py
src/daily_ai_insight/: __init__.py  __main__.py  cli.py
src/daily_ai_insight/collectors/: __init__.py  aibase.py  base.py  factory.py  follow_base.py  folo.py  folo_base.py  github_trending.py  huggingface_papers.py  jiqizhixin.py  news_aggregator.py  papers.py  qbit.py  reddit.py  transformers.py  twitter.py  utils.py  xiaohu.py  xinzhiyuan.py
src/daily_ai_insight/llm/: __init__.py  analyzer.py
src/daily_ai_insight/llm/prompts/: __init__.py  (+1 more)
src/daily_ai_insight/processors/: __init__.py  cleaner.py  deduper.py
src/daily_ai_insight/renderers/: __init__.py  feishu.py  markdown.py  telegram.py
src/daily_ai_insight/storage/: __init__.py  backend.py  manager.py
storage/: .gitignore
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_collectors_real.py  test_new_collectors_real.py
tests/unit/: test_collectors.py  test_feishu_signature.py  test_new_collectors.py  test_storage.py
(+6 files in other folders)
