[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-ai-insight"
version = "0.1.0"
description = "Personal daily intelligence pipeline that fetches data, analyzes with LLM, and pushes briefings"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "rss", "pipeline", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "python-telegram-bot>=20.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
daily-ai-insight = "daily_ai_insight.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/daily-ai-insight"
Repository = "https://github.com/yourusername/daily-ai-insight"
Issues = "https://github.com/yourusername/daily-ai-insight/issues"

[tool.setuptools]
packages = ["daily_ai_insight"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
daily_ai_insight = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/daily_ai_insight",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--asyncio-mode=auto"
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require real API access)",
    "unit: marks tests as unit tests (use mocks)",
]
# Use markers automatically based on directory
# Unit tests: tests/unit/
# Integration tests: tests/integration/ (require .env file)

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/daily_ai_insight"]

[tool.coverage.run]
source = ["src/daily_ai_insight"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]